# apolloc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYNTAX.md
memcmc/: Cargo.toml
memcmc/src/: lazy.rs  lib.rs  prelude.rs
memcmc/src/cell/: atomic.rs  mod.rs  safe.rs
src/: main.rs
src/backend/: builder.rs  instructions.rs  llvm.rs  mod.rs
src/frontend/: ast.rs  checker.rs  mod.rs  parser.rs  tokens.rs
