[package]
name = "apolloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.75"
backtrace = "0.3.69"
clap = { version = "4.4.6", features = ["derive"] }
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
libc = "0.2.149"
llvm-sys = "170"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
target-lexicon = "0.12.11"
memcmc = { path="./memcmc" }
lsp-server = "0.7.5"
lsp-types = "0.94.1"

[build-dependencies]
lalrpop = "0.20.0"

[profile.release]
opt-level = 3
