[package]
name = "memcmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
parking_lot = "0.12.1"


[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }

[features]
default = ["cell", "prelude"]
full = ["default", "safe"]
lazy = []
cell = []
safe = []
prelude = []

no_std = []
